# sonic-platform-pdk-pddf

./: Makefile.am  README.md  configure.ac  package.cfg
debian/: changelog  control
scripts/init/: sonic-nas-shell.service
scripts/lib/python/: nas_ut_framework.py
sonic/: hal_if_mapping.h  nas_base_ndi_utl.h  nas_base_obj.h  nas_base_utils.h  nas_com_log.h  nas_if_utils.h  nas_ndi_obj_id_table.h  nas_switch.h  nas_types.h  nas_vlan_consts.h
src/: hal_if_mapping.cpp  hal_shell_client.c  nas_base_ndi_utl.cpp  nas_base_obj.cpp  nas_base_utils.cpp  nas_if_utils.cpp  nas_ndi_obj_id_table.cpp  nas_switch.c  nas_switch_utl.cpp
src/unit_test/: nas_base_obj_ut_simple.cpp  nas_base_ut_simple_derived_obj.cpp  nas_base_ut_simple_derived_obj.h  nas_base_utils_ut.cpp  nas_if_mapping_unittest.cpp  nas_ndi_obj_id_table_ut.cpp  nas_switch_unittest.cpp
